--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>
           You - <span id="playerScore">0</span
           ><span class="choice" id="playerChoice">
-            --- Choice</i
+            </i
           ></span>
         </h2>
         <i class="far fa-hand-rock" title="Rock" id="playerRock" onclick="select('rock')"></i>
@@ -39,7 +39,7 @@
         <h2>
           You - <span id="computerScore">0</span
           ><span class="choice" id="computerChoice">
-            --- Choice</i
+            </i
           ></span>
         </h2>
         <i class="far fa-hand-rock" title="Rock" id="computerRock"></i>
@@ -49,10 +49,10 @@
         <i class="far fa-hand-spock" title="Spock" id="computerSpock"></i>
       </div>
       <!-- Reset Icon -->
-      <i class="fas fa-sync-alt reset-icon" title="Reset"></i>
+      <i class="fas fa-sync-alt reset-icon" title="Reset" onclick="resetAll()"></i>
       <!-- Results Text -->
       <div class="result-container">
-        <h3 class="result-text" id="resultText">You Won!</h3>
+        <h3 class="result-text" id="resultText"></h3>
       </div>
     </div>
   </body>
