--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <!-- Script -->
-    <script defer src="script.js"></script>
+    <script defer src="script.js" type="module"></script>
   </head>
   <body>
     <div class="game-container">
